<resources>
    <string name="app_name">My_Rahber_App</string>
    <string name="home_title">Courses overview</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_learning">Start Learning</string>
    <string name="course_detail">Course detail</string>
    <string name="course_completed">Course Completed</string>
    <string name="enrolled_courses">Enrolled Courses</string>
    <string name="total_learning_time">Total Learning Time</string>
    <string name="skill_earned">Skill Earned</string>
    <string name="_15">15</string>
    <string name="_24">24</string>
    <string name="_10">10</string>
    <string name="my_profile">My Profile</string>
</resources>